--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "chai": "~1.7.0",
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "debug": "~0.7.4"
   },
   "main": "./lib/modem",
   "scripts": {
