--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   ],
   "dependencies": {
     "querystring": "0.2.0",
-    "follow-redirects": "0.0.3"
+    "follow-redirects": "0.0.3",
+    "debug": "~0.7.4"
   },
   "devDependencies": {
     "chai": "~1.7.0",
-    "mocha": "~1.12.0",
-    "debug": "~0.7.4"
+    "mocha": "~1.12.0"
   },
   "main": "./lib/modem",
   "scripts": {
