--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "docker"
   ],
   "dependencies": {
-    "querystring": "0.2.0",
+    "debug": "~0.7.4",
     "follow-redirects": "0.0.3",
-    "debug": "~0.7.4"
+    "querystring": "0.2.0",
+    "readable-stream": "~1.0.26-4"
   },
   "devDependencies": {
     "chai": "~1.7.0",
