--- a/package.json
+++ b/package.json
@@ -31,5 +31,63 @@
   },
   "engines": {
     "node": ">= 0.8"
-  }
+  },
+  "contributors": [
+    {
+      "name": "Pedro Dias",
+      "email": "petermdias@gmail.com",
+      "url": "https://github.com/apocas",
+      "contributions": 33
+    },
+    {
+      "name": "James Lal",
+      "email": "jlal@mozilla.com",
+      "url": "https://github.com/lightsofapollo",
+      "contributions": 3
+    },
+    {
+      "name": "Vincent Woo",
+      "email": "me@vincentwoo.com",
+      "url": "https://github.com/vincentwoo",
+      "contributions": 2
+    },
+    {
+      "name": "Thorsten Lorenz",
+      "email": "thlorenz@gmx.de",
+      "url": "https://github.com/thlorenz",
+      "contributions": 2
+    },
+    {
+      "name": "Everton Ribeiro",
+      "email": "nuxlli@gmail.com",
+      "url": "https://github.com/nuxlli",
+      "contributions": 1
+    },
+    {
+      "name": "Clemens Stolle",
+      "email": null,
+      "url": "https://github.com/klaemo",
+      "contributions": 1
+    },
+    {
+      "name": "Stuart Knightley",
+      "email": null,
+      "url": "https://github.com/Stuk",
+      "contributions": 1
+    },
+    {
+      "name": "Tejesh Mehta",
+      "email": "",
+      "url": "https://github.com/tjmehta",
+      "contributions": 1
+    },
+    {
+      "url": "https://github.com/niclashoyer",
+      "contributions": 1
+    },
+    {
+      "url": "https://github.com/sreuter",
+      "contributions": 1
+    }
+  ]
 }
