--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docker-modem",
   "description": "Docker remote API network layer module.",
-  "version": "0.1.23",
+  "version": "0.2.0",
   "author": "Pedro Dias <petermdias@gmail.com>",
   "maintainers": [
     "apocas <petermdias@gmail.com>"
@@ -19,7 +19,8 @@
     "debug": "~0.7.4",
     "follow-redirects": "0.0.3",
     "querystring": "0.2.0",
-    "readable-stream": "~1.0.26-4"
+    "readable-stream": "~1.0.26-4",
+    "JSONStream": "0.10.0"
   },
   "devDependencies": {
     "chai": "~1.7.0",
@@ -37,7 +38,7 @@
       "name": "Pedro Dias",
       "email": "petermdias@gmail.com",
       "url": "https://github.com/apocas",
-      "contributions": 33
+      "contributions": 62
     },
     {
       "name": "James Lal",
@@ -46,9 +47,9 @@
       "contributions": 3
     },
     {
-      "name": "Vincent Woo",
-      "email": "me@vincentwoo.com",
-      "url": "https://github.com/vincentwoo",
+      "name": "Matteo Collina",
+      "email": "matteo.collina@gmail.com",
+      "url": "https://github.com/mcollina",
       "contributions": 2
     },
     {
@@ -58,10 +59,10 @@
       "contributions": 2
     },
     {
-      "name": "Everton Ribeiro",
-      "email": "nuxlli@gmail.com",
-      "url": "https://github.com/nuxlli",
-      "contributions": 1
+      "name": "Vincent Woo",
+      "email": "vincent@coderpad.io",
+      "url": "https://github.com/vincentwoo",
+      "contributions": 2
     },
     {
       "name": "Clemens Stolle",
@@ -70,9 +71,27 @@
       "contributions": 1
     },
     {
-      "name": "Stuart Knightley",
-      "email": null,
-      "url": "https://github.com/Stuk",
+      "name": "Everton Ribeiro",
+      "email": "nuxlli@gmail.com",
+      "url": "https://github.com/nuxlli",
+      "contributions": 1
+    },
+    {
+      "name": "Lewis J Ellis",
+      "email": "me@lewisjellis.com",
+      "url": "https://github.com/LewisJEllis",
+      "contributions": 1
+    },
+    {
+      "name": "Ilya Radchenko",
+      "email": "ilya@burstcreations.com",
+      "url": "https://github.com/knownasilya",
+      "contributions": 1
+    },
+    {
+      "name": "Csaba Palfi",
+      "email": "",
+      "url": "https://github.com/csabapalfi",
       "contributions": 1
     },
     {
@@ -82,11 +101,39 @@
       "contributions": 1
     },
     {
+      "name": "Mike Dillon",
+      "email": "",
+      "url": "https://github.com/md5",
+      "contributions": 1
+    },
+    {
+      "name": "Sam Rijs",
+      "email": "srijs@airpost.net",
+      "url": "https://github.com/srijs",
+      "contributions": 1
+    },
+    {
+      "name": "Stuart Knightley",
+      "email": null,
+      "url": "https://github.com/Stuk",
+      "contributions": 1
+    },
+    {
+      "name": "Niclas Hoyer",
+      "email": "",
       "url": "https://github.com/niclashoyer",
       "contributions": 1
     },
     {
+      "name": "Sascha Reuter",
+      "email": "",
       "url": "https://github.com/sreuter",
+      "contributions": 1
+    },
+    {
+      "name": "Tim Macfarlane",
+      "email": null,
+      "url": "https://github.com/refractalize",
       "contributions": 1
     }
   ]
