deps: upgrade JSONStream@0.10 to jsonstream@1
There are a lot of problems with JSONStream vs. jsonstream due to
case-folding and case-insensitive filesystems and how npm's cache
works. The best way forward is for everyone to standardize on
jsonstream, which is the canonical name for the module formerly called
JSONStream.

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "dependencies": {
     "debug": "~0.7.4",
     "follow-redirects": "0.0.3",
+    "jsonstream": "^1.0.3",
     "querystring": "0.2.0",
-    "readable-stream": "~1.0.26-4",
-    "JSONStream": "0.10.0"
+    "readable-stream": "~1.0.26-4"
   },
   "devDependencies": {
     "chai": "~1.7.0",
