--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docker-modem",
   "description": "Docker remote API network layer module.",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "author": "Pedro Dias <petermdias@gmail.com>",
   "maintainers": [
     "apocas <petermdias@gmail.com>"
@@ -18,7 +18,7 @@
   "dependencies": {
     "debug": "~0.7.4",
     "follow-redirects": "0.0.3",
-    "jsonstream": "0.10.0",
+    "JSONStream": "0.10.0",
     "querystring": "0.2.0",
     "readable-stream": "~1.0.26-4"
   },
