--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "docker"
   ],
   "dependencies": {
+    "JSONStream": "0.10.0",
     "debug": "~0.7.4",
     "follow-redirects": "0.0.3",
-    "JSONStream": "0.10.0",
     "querystring": "0.2.0",
-    "readable-stream": "~1.0.26-4"
+    "readable-stream": "~1.0.26-4",
+    "split-ca": "^1.0.0"
   },
   "devDependencies": {
     "chai": "~1.7.0",
