--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "JSONStream": "0.10.0",
     "debug": "~0.7.4",
-    "follow-redirects": "0.0.3",
+    "follow-redirects": "^0.2.0",
     "readable-stream": "~1.0.26-4",
     "split-ca": "^1.0.0"
   },
