--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docker-modem",
   "description": "Docker remote API network layer module.",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Pedro Dias <petermdias@gmail.com>",
   "maintainers": [
     "apocas <petermdias@gmail.com>"
@@ -17,18 +17,18 @@
     "docker"
   ],
   "dependencies": {
-    "JSONStream": "0.10.0",
-    "debug": "^2.6.0",
+    "JSONStream": "1.3.2",
+    "debug": "^3.1.0",
     "readable-stream": "~1.0.26-4",
     "split-ca": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "~1.7.0",
-    "mocha": "~1.12.0"
+    "chai": "~4.1.0",
+    "mocha": "~5.0.0"
   },
   "main": "./lib/modem",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha -R spec"
+    "test": "./node_modules/mocha/bin/mocha -R spec --exit"
   },
   "engines": {
     "node": ">= 0.8"
