--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "chai": "~4.1.0",
-    "mocha": "~5.0.0"
+    "mocha": "^5.0.5"
   },
   "main": "./lib/modem",
   "scripts": {
