--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "JSONStream": "1.3.2",
     "debug": "^3.2.6",
     "readable-stream": "~1.0.26-4",
-    "split-ca": "^1.0.0"
+    "split-ca": "^1.0.0",
+    "ssh2": "^0.8.3"
   },
   "devDependencies": {
     "chai": "~4.1.0",
