--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ script:
   - npm test
   - cd ../dockerode
   - rm -rf ./node_modules/docker-modem
-  - ln -s ../docker-modem ./node_modules/docker-modem
+  - npm install git://github.com/apocas/docker-modem
   - npm test
