--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,12 @@ jobs:
           docker --version
           node -v
           docker pull ubuntu
+          pwd
+          cd ../
+          git clone --depth=50 --branch=master https://github.com/apocas/dockerode.git
+          cd dockerode
+          npm install
+          
       - name: NPM install
         run: npm install
       
