--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,17 @@ jobs:
           git clone --depth=50 --branch=master https://github.com/apocas/dockerode.git
           cd dockerode
           npm install
+          cd ../docker-modem
           
       - name: NPM install
         run: npm install
       
-      - name: Tests
+      - name: Internal Tests
         run: npm test
+            
+      - name: Dockerode Tests
+        run: |
+          cd ../dockerode
+          rm -rf ./node_modules/docker-modem
+          npm install git://github.com/apocas/docker-modem
+          npm test
