--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,5 +43,7 @@ jobs:
         run: |
           cd ../dockerode
           rm -rf ./node_modules/docker-modem
+          pwd
+          ls
           ln -s ../docker-modem ./node-modules/docker-modem
           npm test
