--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "debug": "^4.1.1",
     "readable-stream": "^3.5.0",
     "split-ca": "^1.0.1",
-    "ssh2": "^1.15.0"
+    "ssh2": "^1.15.0",
+    "stream-json": "^1.8.0"
   },
   "devDependencies": {
     "chai": "~4.2.0",
