--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,10 @@ jobs:
       - name: NPM install
         run: npm install
       
-      - name: Internal Tests
+      - name: NPM test
         run: npm test
             
-      - name: Dockerode Tests
+      - name: Dockerode test suite
         run: |
           cd ../dockerode
           rm -rf ./node_modules/docker-modem
@@ -47,37 +47,3 @@ jobs:
           ls ../
           cp -R ../docker-modem ./node_modules/docker-modem
           npm test
-  
-  build_bun:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
-    
-      - name: Provisioning
-        run: |
-          docker --version
-          bun -v
-          docker pull ubuntu
-          pwd
-          cd ../
-          git clone --depth=50 --branch=master https://github.com/apocas/dockerode.git
-          cd dockerode
-          bun install
-          cd ../docker-modem
-
-      - name: Bun install
-        run: bun install
-
-      - name: Internal Tests
-        run: bun run test
-            
-      - name: Dockerode Tests
-        run: |
-          cd ../dockerode
-          rm -rf ./node_modules/docker-modem
-          pwd
-          ls ../
-          cp -R ../docker-modem ./node_modules/docker-modem
-          bun run test
