--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,48 +2,62 @@ name: CI
 
 on:
   push:
+    branches: ['master']
   pull_request:
-  workflow_dispatch:
+    branches: ['master']
+
+permissions:
+  contents: read
 
 jobs:
-  build_nodejs:
+  unit-tests:
+    name: unit tests / node ${{ matrix.node-version }}
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x, 22.x]
-    
+        node-version: [16.x, 18.x, 20.x, 22.x, 24.x]
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v6
+        name: checkout docker-modem
+        with:
+          path: 'docker-modem'
+
+      - name: setup node ${{ matrix.node-version }}
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Provisioning
-        run: |
-          docker --version
-          node -v
-          docker pull ubuntu
-          pwd
-          cd ../
-          git clone --depth=50 --branch=master https://github.com/apocas/dockerode.git
-          cd dockerode
-          npm install
-          cd ../docker-modem
-          
-      - name: NPM install
-        run: npm install
-      
-      - name: NPM test
+      - name: npm ci (docker-modem)
+        run: npm ci
+        working-directory: 'docker-modem'
+
+      - name: npm test (docker-modem)
         run: npm test
-            
-      - name: Dockerode test suite
+        working-directory: 'docker-modem'
+
+      - uses: actions/checkout@v6
+        name: checkout apocas/dockerode
+        with:
+          repository: 'apocas/dockerode'
+          fetch-depth: '1'
+          path: 'dockerode'
+
+      - name: npm ci (dockerode)
+        run: npm ci
+        working-directory: 'dockerode'
+
+      - name: link docker-modem in dockerode/node_modules
         run: |
-          cd ../dockerode
-          rm -rf ./node_modules/docker-modem
-          pwd
-          ls ../
-          cp -R ../docker-modem ./node_modules/docker-modem
-          npm test
+          rm -rf ./dockerode/node_modules/docker-modem
+          cp -R ./docker-modem ./dockerode/node_modules/docker-modem
+
+      - name: provisioning
+        run: |
+          docker pull ubuntu
+
+      - name: npm test (dockerode)
+        run: npm test
+        working-directory: 'dockerode'
+
