--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
     "split-ca": "^1.0.1",
     "ssh2": "^1.15.0"
   },
-  "devDependencies": {
-    "chai": "~4.2.0",
-    "mocha": "^10.2.0"
-  },
   "main": "./lib/modem",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js -R spec --exit"
+    "test": "node --test"
   },
   "engines": {
     "node": ">= 8.0"
