--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
         run: npm ci
         working-directory: 'docker-modem'
 
+      - name: build (docker-modem)
+        run: npm run build
+        working-directory: 'docker-modem'
+
       - name: npm test (docker-modem)
         run: npm test
         working-directory: 'docker-modem'
