--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "split-ca": "^1.0.1",
     "ssh2": "^1.15.0"
   },
-  "main": "./lib/modem",
+  "devDependencies": {
+    "typescript": "^5.9.3",
+    "@types/node": "^24.10.4"
+  },
+  "main": "src/modem",
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "build": "tsc"
   },
   "engines": {
     "node": ">= 8.0"
